<resources>
    <string name="app_name">Inventory Android App SQLite Demo</string>
    <string name="add_product_label">Add New Product</string>
    <string name="add_supplier_label">Add New Supplier</string>
    <string name="productImageDescription">Product Image</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="laptop">Laptop</string>
    <string name="tablet">Tablet</string>
    <string name="mobile">Mobile</string>
    <string name="unkown_category">Unknown Category</string>
    <string name="editor_activity_title_new_Supllier">New Supplier</string>
    <string name="edit_supplier">Edit Supplier</string>
    <string name="add_product">Add New Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_list">Product List</string>
    <string name="supplier_list">Supplier List</string>
    <string name="editor_insert_supplier_failed">Failed to add supplier</string>
    <string name="editor_insert_supplier_successful">Supplier Added Successfully</string>
    <string name="editor_update_supplier_failed">Failed to update supplier</string>
    <string name="editor_update_supplier_successful">Supplier updated successfully</string>
    <string name="unsaved_changes_dialog_msg">There is unsaved changes</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="editor_delete_supplier_failed">Deleting supplier FAILED</string>
    <string name="editor_delete_supplier_successful">Supplier Deleted Successfully</string>
    <string name="cancel">Cancel</string>
    <string name="action_save">Save Item</string>
    <string name="action_delete">Delete Item</string>
    <string name="sell">Sell</string>
    <string name="product_image_decripton">Product Image Description</string>
    <string name="ship_product">Ship to buyers</string>
    <string name="ship">Ship</string>
    <string name="refill_product">Refill Product</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="productDetails">Product Details</string>
    <string name="editor_activity_title_new_Product">Add New Product</string>
    <string name="editor_shipment_failed">Shipment Failed</string>
    <string name="editor_shipment_successful">Product Shipped Successfully</string>
    <string name="editor_shipment_refill">Your are out of stock, please refill this product</string>
    <string name="refill_header">Refill Product</string>
    <string name="refill_message">Enter the amount you want to refill in numbers</string>
    <string name="editor_refill_failed">Refill Failed</string>
    <string name="editor_refill_successful">Product Refilled Successfully</string>
    <string name="editor_refill_enter_positive_number">Enter refill positive number</string>
    <string name="refill">Refill</string>
    <string name="product_name_label">Product Name</string>
    <string name="product_price_label">Product Price</string>
    <string name="product_quantity_label">Product Quantity</string>
    <string name="product_category_label">Product Category</string>
    <string name="supplier_name_label">Supplier Name</string>
    <string name="supplier_phone_label">Supplier Phone</string>
    <string name="no_product_title">No Products Added Yet!</string>
    <string name="no_product_subtitle">Please click on the add button below to start adding new products!</string>
    <string name="user_image_description">User Image</string>
    <string name="no_supplier_title">No Supplier Added Yet!</string>
    <string name="no_supplier_subtitle">Please click on the add button below to start adding new suppliers!</string>
    <string name="product_supplier_label">Product Supplier</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="editor_fill_all_fields">Please fill all fields before submitting</string>
    <string name="editor_filled_minus_value">You can not insert minus values</string>
    <string name="sale">Sale</string>
    <string name="view_details">View Details</string>
</resources>
