<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductEditActivity" android:orientation="vertical">

    <TextView
        android:id="@+id/product_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name_label"
        android:labelFor="@+id/productName"/>

    <EditText
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/product_name_label"/>

    <TextView
        android:labelFor="@+id/productPrice"
        android:id="@+id/product_price_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_price_label" />

    <EditText
        android:hint="@string/product_price_label"
        android:id="@+id/productPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:labelFor="@+id/productQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_quantity_label" />

    <EditText
        android:id="@+id/productQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/product_quantity_label"/>

    <TextView
        android:labelFor="@+id/productCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_category_label" />

    <Spinner
        android:id="@+id/productCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:labelFor="@+id/productSupplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_supplier_label" />

    <Spinner
        android:id="@+id/productSupplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>