<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/thumbnail_height"
            app:srcCompat="@color/colorAccent"
            android:contentDescription="@string/productImageDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/default_placeholder"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="28sp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
        <TextView
            android:id="@+id/productCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/productName" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:text="" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/productCategory"
            />
        <TextView
            android:id="@+id/productQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:text="" />
        <TextView
            android:id="@+id/productSupplierName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/productQuantity"
            android:text="" />
        <TextView
            android:id="@+id/productSupplierPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/productSupplierName"
            android:text="" />
        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/productSupplierPhone"
            />
        <Button
            android:id="@+id/sellProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/ship_product"
            android:layout_margin="15dp"/>

        <Button
            android:id="@+id/refillProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sellProduct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/refill_product"
            android:layout_margin="15dp"/>

        <Button
            android:id="@+id/callSupplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/refillProduct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/call_supplier"
            android:layout_margin="15dp"
            android:layout_marginBottom="30dp"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>